<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="En_ToggleMode" Id="{a214fdfb-1a33-4eb3-ab3d-2b4b81f0e345}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE En_ToggleMode :
(
	Off := 0,
	Simulataneous,
	Alternating
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>