<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <GVL Name="GVL_IO" Id="{69f73459-75c2-4af2-ba4e-a6e34bb922db}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	DI_BtnYellow 	AT %I* : BOOL;
	DI_BtnBlue	 	AT %I* : BOOL;
	
	DO_LampRed 		AT %Q* : BOOL;
	DO_LampGreen	AT %Q* : BOOL;
	
	AI_UltraSonicSensor  AT %I* : INT;
	AO_AnalogGauge		 AT %Q* : INT;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>